[tool.poetry]
name = "llmtag"
version = "0.1.0"
description = "Use LLMs to label any textual dataset"
authors = ["Rohan Singh <singhrohan@outlook.com>, Shaun Porwal <shaun.porwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = "^0.2.11"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
